list-apt-installs (0.4) Linux Mint 18.x; urgency=medium

  * Add argc/argv parsing. Implement --help and --version.
  * Expanding on README.md

-- Scott Caudle <zcotcaudle@gmail.com>  Sun, 17 Jun 2018 16:09:36 -0400

list-apt-installs (0.3) Linux Mint 18.x; urgency=medium

  * New initial release.

-- Scott Caudle <zcotcaudle@gmail.com>  Wed, 30 May 2018 23:59:13 -0400